# PerfectConditions-IOT

./: .gitignore  README.md
docs/: arduino_uno.HEIC  esp_32.HEIC  raspberry_pi.HEIC  specification.md
esp/: platformio.ini
esp/src/: main.cpp
mobile/: pubspec.yaml
mobile/lib/: main.dart
pi/: docker-compose.yaml  requirements.txt  server.py  song.py
pi/mosquitto/config/: mosquitto.conf  pwfile
server/: docker-compose.yaml
server/back/: Cargo.toml
server/back/migrations/2024-01-06-090521_plants/: down.sql  up.sql
server/back/src/: main.rs  schema.rs
server/back/src/dtos/: mod.rs
server/back/src/models/: mod.rs
server/back/src/services/: mod.rs
