[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
ws = { package = "rocket_ws", version = "0.1.0" }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["v4"] }
dotenvy = "0.15"
influxdb2 = "0.3"
influxdb2-structmap = "0.2"
num-traits = "0.2"


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
